--- a/Achievement2/exercise2.2/exercise2.2-task/A2_Recipe_App/src/recipe/templates/recipe/recipe_home.html
+++ b/Achievement2/exercise2.2/exercise2.2-task/A2_Recipe_App/src/recipe/templates/recipe/recipe_home.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,8 +10,18 @@
 </head>
 
 <body>
-    <h1>Welcome to Recipe-App!</h1>
-    <h4>To view list of recipes..... </h4>
+    <h1 style="text-align:center">Welcome to Recipe-App!</h1>
+    <br>
+
+    <div style="position:relative">
+        <center>
+            <img src="{% static 'recipe/images/recipe-bg.jpg' %}" alt="home" width="80%">
+            <a href="/recipes/" style="position:absolute; left: 500px; top: 250px; text-align:center">View all Recipes
+            </a>
+        </center>
+    </div>
+
+
 </body>
 
 </html>
