update bookstore with login logout auth and protect views

--- a/Achievement2/practice_books/src/sales/templates/sales/home.html
+++ b/Achievement2/practice_books/src/sales/templates/sales/home.html
@@ -6,8 +6,12 @@
     Bookstore
 </title>
 
+
+
 <body>
     <h1 style="text-align:center">Welcome to our Bookstore</h1>
+    <br>
+    <a href="{%url 'login' %}"> Login </a>
     <br>
     <img src="{% static 'sales/images/bookstore.jpg' %}" alt="home" width="600" height="300">
 </body>
