--- a/Achievement2/practice_books/src/books/templates/books/main.html
+++ b/Achievement2/practice_books/src/books/templates/books/main.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <h1>Books' list</h1>
 
+<a href="{%url 'logout' %}"> Logout </a>
+
 <table border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>Books' Titles</td>
