recipe login logout auth protect view

--- a/Achievement2/exercise2.2/exercise2.2-task/A2_Recipe_App/src/recipe/templates/recipe/recipe_home.html
+++ b/Achievement2/exercise2.2/exercise2.2-task/A2_Recipe_App/src/recipe/templates/recipe/recipe_home.html
@@ -16,7 +16,7 @@
     <div style="position:relative">
         <center>
             <img src="{% static 'recipe/images/recipe-bg.jpg' %}" alt="home" width="80%">
-            <a href="/recipes/" style="position:absolute; left: 500px; top: 250px; text-align:center">View all Recipes
+            <a href="/login/" style="position:absolute; left: 500px; top: 250px; text-align:center">Login
             </a>
         </center>
     </div>
