--- a/Achievement2/exercise2.2/exercise2.2-task/A2_Recipe_App/src/recipe/templates/recipe/recipe_list.html
+++ b/Achievement2/exercise2.2/exercise2.2-task/A2_Recipe_App/src/recipe/templates/recipe/recipe_list.html
@@ -3,6 +3,8 @@
 <!DOCTYPE html>
 <h1 style="text-align: center;">Recipes' List</h1>
 
+<div style="float: right;"><a href="{%url 'logout' %}"> Logout </a></div><br>
+
 <head>
     <style>
         table,
