--- a/Achievement2/practice_books/src/sales/templates/sales/records.html
+++ b/Achievement2/practice_books/src/sales/templates/sales/records.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
 <h1> Search for sales records </h1>
 <a href="{%url 'logout' %}"> Logout </a>
 <hr>
+<form action="" method="POST">
+    {% csrf_token %}
+    {{form}}
+    <button type="submit">Search</button>
+</form>
+
+{% if sales_df %}
+{{sales_df|safe}}
+{% else %}
+<h3> no data</h3>
+{% endif %}
