--- a/Achievement2/practice_books/src/templates/auth/login.html
+++ b/Achievement2/practice_books/src/templates/auth/login.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
-<h1>Login</h1>
+<h1>Login</h1>          {% comment %} print heading {% endcomment %}
 
-{% comment %} checks for error message {% endcomment %}
+{% comment %} check for error message {% endcomment %}
 {% if error_message %}
-{{error_message}}
+    {{error_message}}
 {% endif %}
 
 {% comment %} print form {% endcomment %}
-<form action="" method="POST">
-    {%comment%} add Django security token {%endcomment%}
-    {% csrf_token %}
+<form action="" method="POST" >
+    {% comment %} add Django security token {% endcomment %}
+    {% csrf_token %}    
 
-    {% comment %} print form received from view {% endcomment %}
-    {{form}}
+    {% comment %} print form received from view  {% endcomment %}
+    {{form}}            
 
     {% comment %} add button {% endcomment %}
-    <button type="submit">Login</button>
+    <button type="submit" >Login</button> 
 </form>
