--- a/Achievement2/exercise2.2/exercise2.2-task/A2_Recipe_App/src/recipe/templates/recipe/recipe_list.html
+++ b/Achievement2/exercise2.2/exercise2.2-task/A2_Recipe_App/src/recipe/templates/recipe/recipe_list.html
@@ -3,7 +3,11 @@
 <!DOCTYPE html>
 <h1 style="text-align: center;">Recipes' List</h1>
 
-<div style="float: right;"><a href="{%url 'logout' %}"> Logout </a></div><br>
+
+<div style="float: right;">
+    <a href="{%url 'recipe:search' %}">Search</a>
+    <a href="{%url 'logout' %}"> Logout </a>
+</div><br>
 
 <head>
     <style>
